# penrose

./: Cargo.toml  README.md  justfile  pinowm.desktop
src/: config.rs  layout.rs  main.rs
