[package]
name = "penrose"
version = "0.1.0"
edition = "2021"
authors = ["MrPicklePinosaur"]
description = "pinosaur's penrose configuration"
repository = "https://github.com/MrPicklePinosaur/penrose.git"

[dependencies]
penrose = { version = "0.2.1" }
pino_xrdb = { git = "https://github.com/MrPicklePinosaur/pino_xutils" }
anyhow = "1"
