[package]
name = "pinowm"
version = "0.1.0"
edition = "2021"
authors = ["MrPicklePinosaur"]
description = "pinosaur's penrose configuration"
repository = "https://github.com/MrPicklePinosaur/penrose.git"

[[bin]]
name = "pinowm"

[dependencies]
penrose = { version = "0.3.1", features = ["serde"] }
penrose_ui = { version = "0.1.1" }

ron = "0.8"
serde = { version = "1", features = ["derive"] }

log = "0.4"

pino_xrdb = { git = "https://github.com/MrPicklePinosaur/pino_xutils" }

anyhow = "1"

